// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CodeViews CodeStatusbar displays no statusBarMessage 1`] = `
<div>
  <div
    class="sc-cfxfcM dYFBNW"
  />
</div>
`;

exports[`CodeViews CodeStatusbar displays statusBarMessage 1`] = `
<div>
  <div
    class="sc-cfxfcM dYFBNW"
  >
    <div
      class="sc-fMMURN bGytvG"
    >
      <span>
        Started streaming 1 records after 5 ms and completed after 10  ms.
      </span>
    </div>
  </div>
</div>
`;

exports[`CodeViews CodeView displays nothing if not successful query 1`] = `<div />`;

exports[`CodeViews CodeView displays request and response info if successful query 1`] = `
<div>
  <div
    class="sc-kOHTFB hGThMb"
  >
    <table
      class="sc-kAkpmW cSwZoV"
    >
      <tbody
        class="sc-gFVvzn btLpGJ"
      >
        <tr
          class="sc-iMWBiJ eecNGM"
        >
          <td
            class="sc-fvtFIe doAVPg"
          >
            Server version
          </td>
          <td
            class="sc-bBeLUv"
          />
        </tr>
        <tr
          class="sc-iMWBiJ eecNGM"
        >
          <td
            class="sc-fvtFIe doAVPg"
          >
            Server address
          </td>
          <td
            class="sc-bBeLUv"
          >
            xx2
          </td>
        </tr>
        <tr
          class="sc-iMWBiJ eecNGM"
        >
          <td
            class="sc-fvtFIe doAVPg"
          >
            Query
          </td>
          <td
            class="sc-bBeLUv"
          >
            MATCH xx0
          </td>
        </tr>
        <tr
          class="sc-iMWBiJ eecNGM"
        >
          <td
            class="sc-fvtFIe doAVPg"
          >
            Summary
            <div
              class="sc-brPLxw dVgoBV fa fa-caret-right"
              title="Expand section"
            />
          </td>
          <td
            class="sc-bBeLUv"
          >
            {,  "server": {,    "version": "xx1", ...
          </td>
        </tr>
        <tr
          class="sc-iMWBiJ eecNGM"
        >
          <td
            class="sc-fvtFIe doAVPg"
          >
            Response
            <div
              class="sc-brPLxw dVgoBV fa fa-caret-right"
              title="Expand section"
            />
          </td>
          <td
            class="sc-bBeLUv"
          >
            [,  {,    "res": "xx3" ...
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
